--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 1rem;
 }
 
 a {
@@ -21,6 +21,7 @@ a {
   --bg-black: #101010;
   --gradient: linear-gradient(90deg, #83a4d4 7.55%, #b6fbff 71.62%);
   --white: white;
+  --off-white: #CBCBCB;
   --text: #cbcbcb;
   --ff-primary: Helvetica Now Display;
   --ff-navbar: VCR OSD Mono;
@@ -53,6 +54,51 @@ p {
   letter-spacing: 1px;
 }
 
+header > li {
+  font-family: var(--ff-navbar);
+  color: var(--off-white);
+  padding-right: 3rem;
+  list-style-type: none;
+  font-size: 1rem;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+}
+
+.vertical-bar-left {
+  border: 2px solid #4D4D4D;
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 55px;
+  height: 100%;
+}
+
+.vertical-bar-right {
+  border: 2px solid #4D4D4D;
+  top: 0;
+  right: 0;
+  position: absolute;
+  width: 55px;
+  height: 100%;
+}
+
+.horizontal-bar {
+  border: 2px solid #4D4D4D;
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 55px;
+}
+
+.layout-container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
 .button {
   font-weight: 500;
   padding: 1.2rem 3rem;
@@ -62,7 +108,7 @@ p {
   transition: all;
   transition-duration: 0.3s;
   transition-timing-function: ease-out;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   display: inline-block;
 }
 
@@ -94,7 +140,7 @@ p {
 
 .arrow {
   animation: bounce 2s ease-in-out infinite;
-  margin-top: 6rem;
+  margin-top: 10rem;
 }
 
 @keyframes bounce {
@@ -108,4 +154,3 @@ p {
     transform: translateY(0px);
   }
 }
-
