--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,17 +54,32 @@ p {
   letter-spacing: 1px;
 }
 
-header > li {
+div li {
+  margin-right: 4rem;
+  list-style-type: none;
+}
+
+div li a {
   font-family: var(--ff-navbar);
   color: var(--off-white);
-  padding-right: 3rem;
   list-style-type: none;
   font-size: 1rem;
+  border-bottom: 1px solid var(--bg-black);
+  transition: border-bottom-color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-out;
+  padding-bottom: 4px;
+}
+
+div li a:hover {
+  border-bottom-color: var(--off-white);
 }
 
 .nav {
   display: flex;
   flex-direction: row;
+  float: right;
+  margin-right: 4rem;
 }
 
 .vertical-bar-left {
@@ -95,8 +110,10 @@ header > li {
 }
 
 .layout-container {
-  max-width: 1100px;
-  margin: 0 auto;
+  max-width: 1300px;
+  margin: 2rem auto;
+  position: relative;
+  height: 100vh;
 }
 
 .button {
