--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1rem;
+  height: 100%;
 }
 
 a {
@@ -33,6 +34,7 @@ body {
   font-family: var(--ff-primary);
   text-align: center;
   color: var(--white);
+  height: 100%;
 }
 
 h1 {
@@ -88,7 +90,7 @@ div li a:hover {
   left: 0;
   position: absolute;
   width: 55px;
-  height: 100%;
+  height: 101%;
 }
 
 .vertical-bar-right {
@@ -97,7 +99,7 @@ div li a:hover {
   right: 0;
   position: absolute;
   width: 55px;
-  height: 100%;
+  height: 101%;
 }
 
 .horizontal-bar {
@@ -110,10 +112,10 @@ div li a:hover {
 }
 
 .layout-container {
-  max-width: 1300px;
+  max-width: 1200px;
   margin: 2rem auto;
   position: relative;
-  height: 100vh;
+  height: 101% !important;
 }
 
 .button {
@@ -150,14 +152,25 @@ div li a:hover {
   -webkit-text-fill-color: transparent;
 }
 
+.hero {
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 8rem auto;
+  width: 500px;
+  height: 300px;
+  position: absolute;
+}
+
 .hero-header {
-  margin-top: 8rem;
+  /*margin-top: 11rem;*/
   margin-bottom: 1rem;
 }
 
 .arrow {
   animation: bounce 2s ease-in-out infinite;
-  margin-top: 10rem;
+  margin-top: 8rem;
 }
 
 @keyframes bounce {
