--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@ a {
   --bg-black: #101010;
   --gradient: linear-gradient(90deg, #83a4d4 7.55%, #b6fbff 71.62%);
   --white: white;
-  --off-white: #CBCBCB;
+  --off-white: #cbcbcb;
   --text: #cbcbcb;
   --ff-primary: Helvetica Now Display;
   --ff-navbar: VCR OSD Mono;
@@ -77,6 +77,10 @@ div li a:hover {
   border-bottom-color: var(--off-white);
 }
 
+.max-w {
+  max-width: 1200px;
+}
+
 .nav {
   display: flex;
   flex-direction: row;
@@ -85,7 +89,7 @@ div li a:hover {
 }
 
 .vertical-bar-left {
-  border: 2px solid #4D4D4D;
+  border: 2px solid #4d4d4d;
   top: 0;
   left: 0;
   position: absolute;
@@ -94,7 +98,7 @@ div li a:hover {
 }
 
 .vertical-bar-right {
-  border: 2px solid #4D4D4D;
+  border: 2px solid #4d4d4d;
   top: 0;
   right: 0;
   position: absolute;
@@ -103,7 +107,7 @@ div li a:hover {
 }
 
 .horizontal-bar {
-  border: 2px solid #4D4D4D;
+  border: 2px solid #4d4d4d;
   top: 0;
   left: 0;
   position: absolute;
@@ -136,14 +140,32 @@ div li a:hover {
 }
 
 .specialise {
+  background: white;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: 0.8rem;
+  display: inline-block;
+  width: fit-content;
 }
 
 .specialise:hover {
-  transition: color;
   transition-duration: 1s;
   transition-timing-function: ease-out;
+  background: var(--gradient);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  cursor: default;
+}
+
+.background {
+  background-color: black;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: none;
+  -webkit-transition: background-image 0.2s ease-in-out;
+  transition: background-image 0.2s ease-in-out;
 }
 
 .gradient-text {
@@ -173,6 +195,62 @@ div li a:hover {
   margin-top: 8rem;
 }
 
+.specialise-in {
+  font-weight: 400;
+  color: var(--off-white);
+}
+
+.line {
+  width: 100%;
+  height: 1rem;
+  background: var(--gradient);
+}
+
+.latest {
+  margin: 9rem auto 0;
+}
+
+.project-container {
+  margin: 3rem auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+  grid-template-rows: 300px 300px;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  justify-items: stretch;
+  align-items: stretch;
+  width: 80%;
+}
+
+.grid-child {
+  background-color: #212121;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 8px;
+}
+
+.project1 {
+  grid-column: 1/4;
+}
+
+.project2 {
+  grid-column: 4/6;
+}
+
+.project3 {
+  grid-column: 1/3;
+}
+
+.project4 {
+  grid-column: 3/6;
+}
+
 @keyframes bounce {
   0% {
     transform: translateY(0px);
@@ -182,5 +260,18 @@ div li a:hover {
   }
   100% {
     transform: translateY(0px);
+  }
+}
+
+
+@media screen and (max-width: 850px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-column-gap: 0;
+    grid-template-rows: 300px 300px 300px 300px;
+  }
+
+  .grid-child {
+    grid-column: 1;
   }
 }
