--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ body {
 
 a {
   text-decoration: none;
+  letter-spacing: 1px;
 }
 
 :root {
@@ -35,6 +36,7 @@ body {
   text-align: center;
   color: var(--white);
   height: 100%;
+  padding: 0 2rem;
 }
 
 h1 {
@@ -52,13 +54,17 @@ h3 {
 p {
   font-size: 1rem;
   color: var(--text);
-  line-height: 1.5;
+  line-height: 1.4;
   letter-spacing: 1px;
 }
 
 div li {
   margin-right: 4rem;
   list-style-type: none;
+}
+
+div li:last-child {
+  margin-right: 1.5rem;
 }
 
 div li a {
@@ -68,9 +74,10 @@ div li a {
   font-size: 1rem;
   border-bottom: 1px solid var(--bg-black);
   transition: border-bottom-color;
-  transition-duration: 0.2s;
+  transition-duration: 0.1s;
   transition-timing-function: ease-out;
   padding-bottom: 4px;
+  letter-spacing: 1px;
 }
 
 div li a:hover {
@@ -90,6 +97,7 @@ div li a:hover {
 
 .vertical-bar-left {
   border: 2px solid #4d4d4d;
+  border-bottom: none;
   top: 0;
   left: 0;
   position: absolute;
@@ -99,6 +107,7 @@ div li a:hover {
 
 .vertical-bar-right {
   border: 2px solid #4d4d4d;
+  border-bottom: none;
   top: 0;
   right: 0;
   position: absolute;
@@ -119,7 +128,7 @@ div li a:hover {
   max-width: 1200px;
   margin: 2rem auto;
   position: relative;
-  height: 101% !important;
+  /*height: 101% !important;*/
 }
 
 .button {
@@ -143,7 +152,7 @@ div li a:hover {
   background: white;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  margin: 0.8rem;
+  margin: 1rem;
   display: inline-block;
   width: fit-content;
 }
@@ -175,19 +184,19 @@ div li a:hover {
 }
 
 .hero {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   margin: 8rem auto;
   width: 500px;
-  height: 300px;
-  position: absolute;
+  /*position: absolute;*/
 }
 
 .hero-header {
   /*margin-top: 11rem;*/
   margin-bottom: 1rem;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
 }
 
 .arrow {
@@ -202,16 +211,17 @@ div li a:hover {
 
 .line {
   width: 100%;
-  height: 1rem;
+  height: 5px;
   background: var(--gradient);
+  margin-top: 4rem;
 }
 
 .latest {
-  margin: 9rem auto 0;
+  margin: 7rem auto 0.6rem;
 }
 
 .project-container {
-  margin: 3rem auto;
+  margin: 3rem auto 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -231,8 +241,15 @@ div li a:hover {
 .grid-child {
   background-color: #212121;
   width: 100%;
-  padding: 1rem;
+  padding: 2rem;
   border-radius: 8px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.grid-child:hover {
+  background-size: 110%;
+  cursor: pointer;
 }
 
 .project1 {
@@ -251,6 +268,45 @@ div li a:hover {
   grid-column: 3/6;
 }
 
+.project-details {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  height: fit-content;
+  margin-left: 0.2rem;
+  width: 100%;
+}
+
+.project-details h3,
+p {
+  margin: 0;
+}
+
+.project-details h3 {
+  margin-bottom: 0.1rem;
+}
+
+.arrow-project {
+  align-self: flex-end;
+  fill: white;
+}
+
+.talk {
+  margin-top: 8rem;
+}
+
+.talk h1 {
+  margin-bottom: 0;
+}
+
+.talk h2 {
+  margin-top: 1rem;
+}
+
+.talk h2:hover {
+  cursor: pointer;
+}
+
 @keyframes bounce {
   0% {
     transform: translateY(0px);
@@ -263,8 +319,7 @@ div li a:hover {
   }
 }
 
-
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 600px) {
   .grid-container {
     grid-template-columns: 1fr;
     grid-column-gap: 0;
@@ -273,5 +328,25 @@ div li a:hover {
 
   .grid-child {
     grid-column: 1;
+  }
+
+  .grid-container {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    grid-column-gap: 0;
+    grid-template-rows: 300px 300px 300px 300px;
+  }
+
+  .grid-child {
+    grid-column: 1;
+  }
+
+  .grid-container {
+    width: 70%;
   }
 }
